cursor fix